Fix artwork not showing up bug

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3961,7 +3961,7 @@ box-shadow: 0px 4px 21px -9px rgba(204,204,204,1);
   position: absolute;
   z-index: 100;
   color: #ffffff;
-  margin-top: -34px;
+  margin-top: -36px;
   padding: 6px 0 0 20px;
   font-size: 0.9em;
 }
